[gd_scene load_steps=16 format=2]

[ext_resource path="res://addons/gloot/item_slot.gd" type="Script" id=1]
[ext_resource path="res://tests/item_definitions_test.gd" type="Script" id=2]
[ext_resource path="res://tests/inventory_stacked_tests.gd" type="Script" id=3]
[ext_resource path="res://tests/item_slot_tests.gd" type="Script" id=4]
[ext_resource path="res://tests/inventory_grid_tests.gd" type="Script" id=5]
[ext_resource path="res://tests/inventory_tests.gd" type="Script" id=6]
[ext_resource path="res://tests/data/item_definitions_grid.tres" type="Resource" id=7]
[ext_resource path="res://tests/data/item_definitions_stack.tres" type="Resource" id=8]
[ext_resource path="res://tests/data/item_definitions_basic.tres" type="Resource" id=9]
[ext_resource path="res://addons/gloot/inventory_grid.gd" type="Script" id=10]
[ext_resource path="res://addons/gloot/inventory.gd" type="Script" id=11]
[ext_resource path="res://addons/gloot/inventory_stacked.gd" type="Script" id=12]
[ext_resource path="res://addons/gloot/inventory_item.gd" type="Script" id=13]
[ext_resource path="res://tests/verification_test.gd" type="Script" id=14]
[ext_resource path="res://tests/test_runner.gd" type="Script" id=15]

[node name="InventorySystemTests" type="Node"]
script = ExtResource( 15 )

[node name="VerificationTest" type="Node" parent="."]
script = ExtResource( 14 )

[node name="ItemDefinitionsTest" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Inventory" type="Node" parent="ItemDefinitionsTest"]
script = ExtResource( 11 )
item_protoset = ExtResource( 9 )

[node name="MinimalItem" type="Node" parent="ItemDefinitionsTest/Inventory"]
script = ExtResource( 13 )
protoset = ExtResource( 9 )
prototype_id = "minimal_item"

[node name="MinimalItem2" type="Node" parent="ItemDefinitionsTest/Inventory"]
script = ExtResource( 13 )
protoset = ExtResource( 9 )
prototype_id = "minimal_item"

[node name="InventoryTests" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Inventory1" type="Node" parent="InventoryTests"]
script = ExtResource( 11 )
item_protoset = ExtResource( 9 )

[node name="MinimalItem" type="Node" parent="InventoryTests/Inventory1"]
script = ExtResource( 13 )
protoset = ExtResource( 9 )
prototype_id = "minimal_item"

[node name="Inventory2" type="Node" parent="InventoryTests"]
script = ExtResource( 11 )
item_protoset = ExtResource( 9 )

[node name="InventoryStackedTests" type="Node" parent="."]
script = ExtResource( 3 )

[node name="InventoryStacked" type="Node" parent="InventoryStackedTests"]
script = ExtResource( 12 )
item_protoset = ExtResource( 8 )
capacity = 10.0

[node name="MinimalItem" type="Node" parent="InventoryStackedTests"]
script = ExtResource( 13 )
protoset = ExtResource( 8 )
prototype_id = "minimal_item"

[node name="StackableItem" type="Node" parent="InventoryStackedTests"]
script = ExtResource( 13 )
protoset = ExtResource( 8 )
prototype_id = "stackable_item"

[node name="BigItem" type="Node" parent="InventoryStackedTests"]
script = ExtResource( 13 )
protoset = ExtResource( 8 )
prototype_id = "big_item"

[node name="InventoryGridTests" type="Node" parent="."]
script = ExtResource( 5 )

[node name="InventoryGrid3x3" type="Node" parent="InventoryGridTests"]
script = ExtResource( 10 )
item_protoset = ExtResource( 7 )
size = Vector2( 3, 3 )

[node name="Item_1x1" type="Node" parent="InventoryGridTests"]
script = ExtResource( 13 )
protoset = ExtResource( 7 )
prototype_id = "item_1x1"

[node name="Item_2x2" type="Node" parent="InventoryGridTests"]
script = ExtResource( 13 )
protoset = ExtResource( 7 )
prototype_id = "item_2x2"

[node name="ItemSlotTests" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Inventory1" type="Node" parent="ItemSlotTests"]
script = ExtResource( 11 )
item_protoset = ExtResource( 9 )

[node name="MinimalItem" type="Node" parent="ItemSlotTests/Inventory1"]
script = ExtResource( 13 )
protoset = ExtResource( 9 )
prototype_id = "minimal_item"

[node name="Inventory2" type="Node" parent="ItemSlotTests"]
script = ExtResource( 11 )
item_protoset = ExtResource( 9 )

[node name="ItemSlot" type="Node" parent="ItemSlotTests"]
script = ExtResource( 1 )
